# dbt-ex-wip

./: .gitignore
src/: README.md  profiles.yml  pyproject.toml
src/householding/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  run_steps.sh
src/householding/macros/: extract_number_scientific_notation.sql  loop_over_columns_and_rows.sql  loop_over_columns_in_cte.sql  select_star_cte.sql
src/householding/models/marts/: cperf.sql
src/householding/models/sources/: schema.yml
src/householding/models/staging/: sources.yml  stg_amd.sql  stg_ami.sql
src/householding/seeds/: AMI0103000324020100029315.txt  CustData.morph  cperf_sample_output.txt  csv_import.sh
