[project]
name = "householding"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.9.1,<2.0.0)",
    "dbt-duckdb (>=1.9.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "householding", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
